Finish first draft of chapters 1 and 2

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -600,3 +600,12 @@ note={under review}
   booktitle={ICML Workshop on Uncertainty and Robustness},
   year={2020}
 }
+
+@inproceedings{jiang2020identifying,
+  title={Identifying and correcting label bias in machine learning},
+  author={Jiang, Heinrich and Nachum, Ofir},
+  booktitle={International Conference on Artificial Intelligence and Statistics},
+  pages={702--712},
+  year={2020},
+  organization={PMLR}
+}
