--- a/FrontBackmatter/Acknowledgments.tex
+++ b/FrontBackmatter/Acknowledgments.tex
@@ -20,6 +20,6 @@
 \let\cleardoublepage\relax
 \let\cleardoublepage\relax
 \chapter*{Acknowledgments}
-I thank my beloved wife Chao.
+I thank my supervisor Novi and my wife Chao.
 
 \endgroup
