--- a/FrontBackmatter/Contents.tex
+++ b/FrontBackmatter/Contents.tex
@@ -23,31 +23,24 @@
   %*******************************************************
   % List of Figures
   %*******************************************************
-  %\phantomsection
-  %\addcontentsline{toc}{chapter}{\listfigurename}
-  \pdfbookmark[1]{\listfigurename}{lof}
-  \listoffigures
+  % \pdfbookmark[1]{\listfigurename}{lof}
+  % \listoffigures
 
-  \vspace{8ex}
+  % \vspace{8ex}
 
   %*******************************************************
   % List of Tables
   %*******************************************************
-  %\phantomsection
-  %\addcontentsline{toc}{chapter}{\listtablename}
-  \pdfbookmark[1]{\listtablename}{lot}
-  \listoftables
+  % \pdfbookmark[1]{\listtablename}{lot}
+  % \listoftables
 
-  \vspace{8ex}
-  % \newpage
+  % \vspace{8ex}
 
   %*******************************************************
   % List of Listings
   %*******************************************************
-  %\phantomsection
-  %\addcontentsline{toc}{chapter}{\lstlistlistingname}
-  \pdfbookmark[1]{\lstlistlistingname}{lol}
-  \lstlistoflistings
+  % \pdfbookmark[1]{\lstlistlistingname}{lol}
+  % \lstlistoflistings
 
   % \vspace{8ex}
 
@@ -59,7 +52,7 @@
   % \chapter*{Glossary}
   % \printglossaries
 
-  \vspace{8ex}
+  % \vspace{8ex}
 
   %*******************************************************
   % Acronyms
