Finish first draft of chapter 3 (now 4)

--- a/ch/2-related-work.tex
+++ b/ch/2-related-work.tex
@@ -36,7 +36,7 @@
 % The following is a review of the literature on Fairness in Machine Learning.
 % Several different approaches to and definition of Fairness are presented.
 % The focus is on identifying the major trends in the field from the beginning.
-\section{Two views of the dataset bias problem}\label{two-views-of-the-dataset-bias-problem}
+\section{\NoCaseChange{Two views of the dataset bias problem}}\label{two-views-of-the-dataset-bias-problem}
 As hinted to in the introduction,
 there is a divide in the relevant literature in how the problem of dataset bias is approached.
 On the one hand, there is the ``groundtruth-centric'' view -- expressed through most of the introduction --
