Change design of chapter numbers

--- a/ch/1-introduction.tex
+++ b/ch/1-introduction.tex
@@ -7,10 +7,10 @@ This includes their opaqueness and their general tendency to take shortcuts;
 leading to situations where \acp{ANN} do not do `what we meant', but just what they were explicitly told to do.
 
 This problem becomes especially severe when the training data is biased in some way,
-which, by default, makes the \ac{ML} system copy the bias, or even exacerbate it.
+which, by default, makes the \ac{ML} system internalize the bias, or in some cases even exacerbate it.
 When applied in the deployment setting, the system will then not behave in the desired way.
 The topic of this thesis is how to deal with biased data;
-what types of bias exist and how to correct it if possible.
+what types of biases exist and how to correct them if possible.
 
 \section{Motivation and aims}
 Many datasets with person-related features display biases when examined by common fairness criteria.
