--- a/main.tex
+++ b/main.tex
@@ -44,13 +44,14 @@ titlepage,numbers=noenddot,%1headlines,
   drafting=true,    % print version information on the bottom of the pages
   tocaligned=false, % the left column of the toc will be aligned (no indentation)
   dottedtoc=true,  % page numbers in ToC flushed right
-  eulerchapternumbers=true, % use AMS Euler for chapter font (otherwise Palatino)
+  eulerchapternumbers=false, % use AMS Euler for chapter font (otherwise Palatino)
   linedheaders=false,       % chapter headers will have line above and beneath
   floatperchapter=true,     % numbering per chapter for all floats (i.e., Figure 1.1)
   eulermath=false,  % use awesome Euler fonts for mathematical formulae (only with pdfLaTeX)
   beramono=true,    % toggle a nice monospaced font (w/ bold)
   palatino=true,    % deactivate standard font for loading another one, see the last section at the end of this file for suggestions
   style=classicthesis % classicthesis, arsclassica
+  % style=arsclassica % classicthesis, arsclassica
 }{classicthesis}
 
 
@@ -205,6 +206,23 @@ titlepage,numbers=noenddot,%1headlines,
 \usepackage{setspace}
 % \setstretch{1.4}
 \onehalfspacing
+
+% \makeatletter
+% \renewcommand*{\ct@altfont}{}
+% \makeatother
+
+% put the chapter number on the left right next to the chapter name
+\newcommand\formatchapter[1]{%
+  \vbox to \ht\strutbox{%
+  \setbox0=\hbox{\chapterNumber\thechapter\hspace{10pt}\vline\ }%
+  \advance\hsize-\wd0 \advance\hsize-10pt\raggedright%
+  \spacedallcaps{#1}\vss}}
+\titleformat{\chapter}[block]%
+   {\spacedsmallcaps}%
+   {\textcolor{CTsemi}{\chapterNumber\thechapter}%
+   \ \,\hspace{10pt}\vline\ }{10pt}%
+   {\formatchapter}
+\definecolor{CTsemi}{gray}{0.4}
 
 % don't make section titles all lower case
 \newcommand{\spacedsmallcaps}[1]{\spacedlowsmallcaps{\NoCaseChange{#1}}}
