Finish chapter 5 first draft

--- a/FrontBackmatter/Contents.tex
+++ b/FrontBackmatter/Contents.tex
@@ -64,6 +64,7 @@
   \begin{acronym}[UMLX]
     \acro{ANN}{artificial neural network}
     \acro{AR}{acceptance rate}
+    \acro{CNN}{convolutional neural network}
     \acro{DP}{demographic parity}
     \acro{EOdds}{equalized odds}
     \acro{EOpp}{equality of opportunity}
