--- a/ch/5-zsf.tex
+++ b/ch/5-zsf.tex
@@ -1,1 +1,5 @@
 \chapter{Zero-shot Fairness with Invisible Demographics}\label{ch:zsf}
+A shortcoming of the approach from the previous chapter
+is its reliance on a context/pre-training set which has \(s\) labels.
+While it is usually easier to collect data without \(y\) labels and with \(s\) labels,
+it is even easier to collect data without any label.
