--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -525,7 +525,7 @@ year = {2017},
  title = {Deep Learning Face Attributes in the Wild},
  author = {Liu, Ziwei and Luo, Ping and Wang, Xiaogang and Tang, Xiaoou},
  booktitle = {Proceedings of International Conference on Computer Vision (ICCV)},
- month = {December},
+ month = {12},
  year = {2015} 
 }
 
