Maybe finish zsf chapter

--- a/main.tex
+++ b/main.tex
@@ -70,7 +70,7 @@ titlepage,numbers=noenddot,%1headlines,
 \newcommand{\myUni}{University of Sussex\xspace}
 \newcommand{\myLocation}{Hove\xspace}
 \newcommand{\myTime}{January 2021\xspace}
-\newcommand{\myVersion}{Thesis v0.1}
+\newcommand{\myVersion}{Thesis v0.2}
 
 % ********************************************************************
 % Setup, finetuning, and useful commands
@@ -400,7 +400,7 @@ titlepage,numbers=noenddot,%1headlines,
   They are presented here with short explanations for the context.
 }
 \part{Main}\label{pt:main}
-\include{ch/3-0-common-notation}
+% \include{ch/3-0-common-notation}
 \include{ch/3-target-labels}
 \include{ch/4-nifr}
 \include{ch/5-zsf}
