--- a/main.tex
+++ b/main.tex
@@ -45,11 +45,12 @@ titlepage,numbers=noenddot,%1headlines,
   tocaligned=false, % the left column of the toc will be aligned (no indentation)
   dottedtoc=true,  % page numbers in ToC flushed right
   eulerchapternumbers=true, % use AMS Euler for chapter font (otherwise Palatino)
-  linedheaders=false,       % chapter headers will have line above and beneath
+  linedheaders=true,       % chapter headers will have line above and beneath
   floatperchapter=true,     % numbering per chapter for all floats (i.e., Figure 1.1)
   eulermath=false,  % use awesome Euler fonts for mathematical formulae (only with pdfLaTeX)
   beramono=true,    % toggle a nice monospaced font (w/ bold)
   palatino=true,    % deactivate standard font for loading another one, see the last section at the end of this file for suggestions
+  parts=true,
   style=classicthesis % classicthesis, arsclassica
   % style=arsclassica % classicthesis, arsclassica
 }{classicthesis}
@@ -211,21 +212,39 @@ titlepage,numbers=noenddot,%1headlines,
 % \renewcommand*{\ct@altfont}{}
 % \makeatother
 
-% put the chapter number on the left right next to the chapter name
-\definecolor{CTsemi}{gray}{0.4}
-% \newcommand\formatchapter[1]{%
-%   \vbox to \ht\strutbox{%
-%   \setbox0=\hbox{\chapterNumber\thechapter\hspace{10pt}\vline\ }%
-%   \advance\hsize-\wd0 \advance\hsize-10pt\raggedright%
-%   \spacedallcaps{#1}\vss}}
+\usepackage{fontspec}
+
+% \newfontface\chapterNumber[Scale=7,Color=000000]{TeX Gyre Pagella Bold}
+\newfontface\chapterNumbers{Linux Libertine O}[Scale=6,Color=303030]
+% \DeclareFixedFont{\chapterNumber}{U}{eur}{b}{n}{50}
+
+
+% large number to the right
+
+% \MakeAtLetter
+% \ifthenelse{\boolean{ct@linedheaders}}%
+% {% lines above and below, number right
+%     \titleformat{\chapter}[display]%
+%     {\relax}{\raggedleft{\chapterNumbers\thechapter} \\ }{0pt}%
+%     {\titlerule\vspace*{.9\baselineskip}\raggedright\spacedallcaps}[\normalsize\vspace*{.8\baselineskip}\titlerule]%
+% }{% something like Bringhurst
+%     \titleformat{\chapter}[display]%
+%     {\relax}{\mbox{}\oldmarginpar{\vspace*{-3\baselineskip}\chapterNumbers\thechapter}}{0pt}%
+%     {\raggedright\spacedallcaps}[\normalsize\vspace*{.8\baselineskip}\titlerule]%
+% }
+% \MakeAtOther
+
+
+% number to the left with vertical line
+
 \newcommand\formatchapter[1]{%
   \parbox[b]{9cm}{\raggedright
   \spacedallcaps{#1}}}
 \titleformat{\chapter}[block]%
    {\spacedsmallcaps}%
-   {\textcolor{CTsemi}{\chapterNumber\thechapter}%
-   \ \,\hspace{10pt}\vline\ }{10pt}%
-   {\formatchapter}
+   {{\chapterNumbers\thechapter} %
+   \ \,\hspace{13pt}\vline width 1pt\ }{20pt}%
+   {\formatchapter}[\normalsize\vspace*{.8\baselineskip}]
 
 % don't make section titles all lower case
 \newcommand{\spacedsmallcaps}[1]{\spacedlowsmallcaps{\NoCaseChange{#1}}}
@@ -390,23 +409,23 @@ titlepage,numbers=noenddot,%1headlines,
 \pagenumbering{arabic}
 %\setcounter{page}{90}
 % use \cleardoublepage here to avoid problems with pdfbookmark
-\cleardoublepage
-\part{Preliminaries}\label{pt:intro}
+% \cleardoublepage
+\part{Introduction}\label{pt:intro}
 \include{ch/1-introduction}
 \include{ch/2-related-work}
-\cleardoublepage
-\ctparttext{
-  The main part comprises three published works.
-  They are presented here with short explanations for the context.
-}
-\part{Main}\label{pt:main}
+% \cleardoublepage
+% \ctparttext{
+%   The main part comprises three published works.
+%   They are presented here with short explanations for the context.
+% }
+\part{Main works}\label{pt:main}
 % \include{ch/3-0-common-notation}
 \include{ch/3-target-labels}
 \include{ch/4-nifr}
 \include{ch/5-zsf}
 
 \cleardoublepage
-\part{Final}\label{pt:end}
+\part{Conclusion}\label{pt:end}
 \include{ch/6-conclusion}
 
 % ********************************************************************
