--- a/ch/6-conclusion.tex
+++ b/ch/6-conclusion.tex
@@ -1,1 +1,4 @@
-\chapter{Conclusion}\label{ch:conclusion}
+\chapter{Discussion and future work}\label{ch:conclusion}
+In this thesis, I have presented three approaches to deal with dataset bias.
+However, this by no means covers \emph{all} possible biases.
+Correcting dataset bias remains a chall
