--- a/main.tex
+++ b/main.tex
@@ -63,7 +63,7 @@ titlepage,numbers=noenddot,%1headlines,
 % ****************************************************************************************************
 \newcommand{\myTitle}{Learning with Biased Data: Invariant Representations and Target Labels\xspace}
 % \newcommand{\mySubtitle}{\xspace}
-\newcommand{\myDegree}{Doctor of Philosophy\xspace}
+\newcommand{\myDegree}{A thesis submitted for the degree of Doctor of Philosophy\xspace}
 \newcommand{\myName}{Thomas Maximilian Kehrenberg\xspace}
 % \newcommand{\myProf}{Put name here\xspace}
 % \newcommand{\myOtherProf}{Put name here\xspace}
