Revert lualatex-specific changes

--- a/main.tex
+++ b/main.tex
@@ -45,7 +45,7 @@ titlepage,numbers=noenddot,%1headlines,
   tocaligned=false, % the left column of the toc will be aligned (no indentation)
   dottedtoc=true,  % page numbers in ToC flushed right
   eulerchapternumbers=true, % use AMS Euler for chapter font (otherwise Palatino)
-  linedheaders=true,       % chapter headers will have line above and beneath
+  linedheaders=false,       % chapter headers will have line above and beneath
   floatperchapter=true,     % numbering per chapter for all floats (i.e., Figure 1.1)
   eulermath=false,  % use awesome Euler fonts for mathematical formulae (only with pdfLaTeX)
   beramono=true,    % toggle a nice monospaced font (w/ bold)
@@ -96,8 +96,8 @@ titlepage,numbers=noenddot,%1headlines,
 
 \usepackage{csquotes}
 \PassOptionsToPackage{%
-  backend=biber,bibencoding=utf8, %instead of bibtex
-  % backend=bibtex8,bibencoding=ascii,%
+  % backend=biber,bibencoding=utf8, %instead of bibtex
+  backend=bibtex8,bibencoding=ascii,%
   language=auto,%
   %style=numeric-comp,%
   %bibstyle=authoryear,dashed=false, % dashed: substitute rep. author with ---
@@ -208,32 +208,7 @@ titlepage,numbers=noenddot,%1headlines,
 % \setstretch{1.4}
 \onehalfspacing
 
-% \makeatletter
-% \renewcommand*{\ct@altfont}{}
-% \makeatother
-
-\usepackage{fontspec}
-
-% \newfontface\chapterNumber[Scale=7,Color=000000]{TeX Gyre Pagella Bold}
-\newfontface\chapterNumbers{Linux Libertine O}[Scale=6,Color=303030]
-% \DeclareFixedFont{\chapterNumber}{U}{eur}{b}{n}{50}
-
-
-% large number to the right
-
-% \MakeAtLetter
-% \ifthenelse{\boolean{ct@linedheaders}}%
-% {% lines above and below, number right
-%     \titleformat{\chapter}[display]%
-%     {\relax}{\raggedleft{\chapterNumbers\thechapter} \\ }{0pt}%
-%     {\titlerule\vspace*{.9\baselineskip}\raggedright\spacedallcaps}[\normalsize\vspace*{.8\baselineskip}\titlerule]%
-% }{% something like Bringhurst
-%     \titleformat{\chapter}[display]%
-%     {\relax}{\mbox{}\oldmarginpar{\vspace*{-3\baselineskip}\chapterNumbers\thechapter}}{0pt}%
-%     {\raggedright\spacedallcaps}[\normalsize\vspace*{.8\baselineskip}\titlerule]%
-% }
-% \MakeAtOther
-
+\definecolor{CTsemi}{gray}{0.3}
 
 % number to the left with vertical line
 
@@ -242,7 +217,7 @@ titlepage,numbers=noenddot,%1headlines,
   \spacedallcaps{#1}}}
 \titleformat{\chapter}[block]%
    {\spacedsmallcaps}%
-   {{\chapterNumbers\thechapter} %
+   {\textcolor{CTsemi}{\chapterNumber\thechapter}%
    \ \,\hspace{13pt}\vline width 1pt\ }{20pt}%
    {\formatchapter}[\normalsize\vspace*{.8\baselineskip}]
 
