--- a/main.tex
+++ b/main.tex
@@ -428,11 +428,12 @@ titlepage,numbers=noenddot,%1headlines,
 \pagenumbering{arabic}
 %\setcounter{page}{90}
 % use \cleardoublepage here to avoid problems with pdfbookmark
-% \cleardoublepage
+\cleardoublepage
 \part{Introduction}\label{pt:intro}
 \include{ch/1-introduction}
 \include{ch/2-related-work}
-% \cleardoublepage
+
+\cleardoublepage
 % \ctparttext{
 %   The main part comprises three published works.
 %   They are presented here with short explanations for the context.
