--- a/allreferences.bib
+++ b/allreferences.bib
@@ -296,9 +296,9 @@
   volume	= {5},
   number	= {2},
   pages		= {153--163},
-  year		= {2017},
-  publisher	= {Mary Ann Liebert, Inc. 140 Huguenot Street, 3rd Floor New
-		  Rochelle, NY 10801 USA}
+%   publisher	= {Mary Ann Liebert, Inc. 140 Huguenot Street, 3rd Floor New
+		  %Rochelle, NY 10801 USA},
+  year		= {2017}
 }
 
 @Article{	  chouldechova2017fair,
@@ -1104,7 +1104,7 @@
 }
 
 @InProceedings{	  kamishima2011fairness,
-  title		= {Fair{\-}ness-aware learning through regularization
+  title		= {Fairness-aware learning through regularization
 		  approach},
   author	= {Kamishima, Toshihiro and Akaho, Shotaro and Sakuma, Jun},
   booktitle	= {Data Mining Workshops (ICDMW), 2011 IEEE 11th
@@ -1171,15 +1171,6 @@
   location	= {Glasgow, UK}
 }
 
-@Article{	  KehCheQua18,
-  author	= {Kehrenberg, Thomas and Chen, Zexun and Quadrianto, Novi},
-  title		= {Tuning Fairness by Balancing Target Labels},
-  journal	= {Frontiers in Artificial Intelligence},
-  volume	= {3},
-  pages		= {33},
-  year		= {2020}
-}
-
 @Article{	  kehrenberg2018tuning,
   title		= {Tuning Fairness by Marginalizing Latent Target Labels},
   author	= {Kehrenberg, Thomas and Chen, Zexun and Quadrianto, Novi},
@@ -1189,7 +1180,7 @@
 
 @InProceedings{	  kehrenberg2020nullsampling,
   author	= {Kehrenberg, Thomas and Bartlett, Myles and Thomas, Oliver
-		  and Qua{\-}dri{\-}anto, Novi},
+		  and Quadrianto, Novi},
   title		= {Null-sampling for Interpretable and Fair Representations},
   year		= {2020},
   isbn		= {9783030586041},
@@ -1212,7 +1203,7 @@
 
 @Article{	  kehrenberg2020zeroshot,
   author	= {Kehrenberg, Thomas and Sharmanska, Viktoriia and Bartlett,
-		  Myles and Quadrianto, Novi},
+		  Myles and Quad\-ri\-an\-to, Novi},
   title		= {Zero-shot Fairness with Invisible Demographics},
   booktitle	= {Submitted to International Conference on Learning
 		  Representations},
@@ -1246,7 +1237,7 @@
 @InProceedings{	  kilbertus2017avoiding,
   title		= {Avoiding Discrimination through Causal Reasoning},
   author	= {Kilbertus, Niki and Rojas Carulla, Mateo and Parascandolo,
-		  Giambattista and Hardt, Mo{\-}ritz and Janzing, Dominik and
+		  Giambattista and Hardt, Moritz and Janzing, Dominik and
 		  Sch\"{o}lkopf, Bernhard},
   booktitle	= {Advances in Neural Information Processing Systems (NIPS)},
   pages		= {656--666},
@@ -1612,7 +1603,7 @@
 }
 
 @InProceedings{	  mary2019fairness,
-  title		= {Fairness-aware learning for continuous attributes and
+  title		= {Fair{\-}ness-aware learning for continuous attributes and
 		  treatments},
   author	= {Mary, J{\'e}r{\'e}mie and Calauz{\`e}nes, Cl{\'e}ment and
 		  El Karoui, Noureddine},
@@ -1732,7 +1723,7 @@
 }
 
 @InProceedings{	  pedreshi2008discrimination,
-  title		= {Dis{\-}crimination-aware data mining},
+  title		= {Discrimination-aware data mining},
   author	= {Pedreshi, Dino and Ruggieri, Salvatore and Turini,
 		  Franco},
   booktitle	= {Proceedings of the 14th ACM SIGKDD international
